--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -34,6 +34,10 @@
 
         <section id="catalog" class="catalog">
             <h2>Наши торты</h2>
+            <div class="search-container">
+                <input type="text" id="search-input" placeholder="Поиск тортов...">
+                <button id="search-button"><i class="fas fa-search"></i></button>
+            </div>
             <div id="cakes-list"></div>
         </section>
 
