--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -16,6 +16,12 @@
                 <li><a href="#about">О нас</a></li>
                 <li><a href="#catalog">Каталог</a></li>
                 <li><a href="#contact">Контакты</a></li>
+                {% if user %}
+                <li><a href="/profile">Профиль</a></li>
+                <li><a href="/logout">Выйти</a></li>
+                {% else %}
+                <li><a href="/auth">Войти</a></li>
+                {% endif %}
             </ul>
         </nav>
     </header>
